added new jacoco plugin